Use Integer.valueOf() to avoid allocating objects.